# s2gos-controller

./: .editorconfig  .gitignore  404.html  CHANGES.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pixi.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
about/: index.html
architecture/: index.html
cli/: index.html
client-api/: index.html
client-cli/: index.html
contributing/: index.html
deployment/: index.html
docs/: about.md  architecture.md  cli.md  client-api.md  client-cli.md  contributing.md  deployment.md  execution-requests.md  index.md  installation.md  process-dev.md  request-format.md  roadmap.md  todo.md
docs/hooks/: notebooks_json_output.py
docs/notebooks/: README.md  client-api-airflow.ipynb  client-api.ipynb  client-gui.ipynb  notebooks_json_output.py
docs/overrides/css/: custom.css
execution-requests/: index.html
hooks/notebooks_json_output/: index.html
installation/: index.html
notebooks/: airflow-setup.ipynb  client-api-airflow.ipynb  client-api.ipynb  client-cli.ipynb  client-gui-show.ipynb  client-gui-show_jobs.ipynb  client-gui-show_submitter.ipynb  client-gui.ipynb  index.html
notebooks/client-api/: index.html
notebooks/client-api-airflow/: index.html
notebooks/client-cli/: index.html
notebooks/client-gui/: index.html
notebooks/test.zarr/: zarr.json
notebooks/test.zarr/c/: zarr.json
notebooks/test.zarr/lat/: zarr.json
notebooks/test.zarr/lon/: zarr.json
notebooks/test.zarr/time/: zarr.json
overrides/css/: custom.css
process-dev/: index.html
request-format/: index.html
roadmap/: index.html
s2gos-airflow/: .gitignore  README.md  pyproject.toml
s2gos-airflow/dags/: example_dag.py  primes_between.py  return_base_model.py  simulate_scene.py  sleep_a_while.py  tutorial.py
s2gos-airflow/notebooks/: airflow-client-test.ipynb
s2gos-airflow/s2gos_airflow/: tutorial.py
s2gos-airflow/src/s2gos_airflow/: airflow_service.py
s2gos-airflow/tests/: test_example_dag.py
s2gos-airflow/tests/dags/: test_example_dag.py
s2gos-app-ex/: Dockerfile  README.md  pyproject.toml
s2gos-app-ex/src/s2gos_app_ex/: cli.py  processes.py
s2gos-client/: README.md  pyproject.toml
s2gos-client/src/s2gos_client/: __init__.py  api.py  cli.py  client.py  config.py  coro.py  defaults.py  docstr.py  exceptions.py  gui.py  transport.py
s2gos-client/src/s2gos_client/api/: __init__.py  async_client.py  async_client_mixin.py  client.py  client_mixin.py  config.py  defaults.py  error.py  exceptions.py  ishell.py  transport.py
s2gos-client/src/s2gos_client/api/transport/: __init__.py  args.py  httpx.py  requests.py  transport.py
s2gos-client/src/s2gos_client/cli/: __init__.py  app.py  cli.py  client.py  config.py  defaults.py  impl.py  output.py  renderer.py  request.py
s2gos-client/src/s2gos_client/gui/: __init__.py  bbox_selector.py  client.py  job_info_panel.py  jobs_form.py  jobs_observer.py  jobs_panel.py  main_form.py  main_panel.py  pathref.py  processes_form.py  util.py  widget_factory.py
s2gos-client/src/s2gos_client/gui/component/: __init__.py  bbox.py  component.py  container.py  design.md  factory.py  impl.py  json.py  registry.py  types.py
s2gos-client/src/s2gos_client/gui/viewable/: factory.py  provider.py  providers.py  registry.py  types.py
s2gos-client/src/tests/: helpers.py  test_cli.py  test_client.py  test_config.py  test_coro.py  test_gui.py  test_transport.py
s2gos-client/src/tests/api/: test_async_client.py  test_client.py  test_config.py  test_ishell.py  test_transport.py
s2gos-client/src/tests/api/transport/: test_args.py  test_httpx.py  test_requests.py
s2gos-client/src/tests/cli/: test_aliased_group.py  test_app.py  test_cli.py  test_client.py  test_config.py  test_output.py  test_request.py
s2gos-client/src/tests/gui/: test_client.py  test_jobs_form.py  test_jobs_info_panel.py  test_jobs_panel.py  test_main_form.py  test_main_panel.py  test_submitter.py
s2gos-client/src/tests/gui/component/: test_component.py  test_container.py  test_factory.py  test_registry.py
s2gos-client/tests/: schema2ui.py  test_api.py  test_gui.py
s2gos-client/tests/schemas/: pathref-schema.yaml
s2gos-common/: README.md  pyproject.toml
s2gos-common/src/s2gos_common/: __init__.py  models.py  service.py
s2gos-common/src/s2gos_common/cli/: cli.py  constants.py  group.py  request.py
s2gos-common/src/s2gos_common/process/: __init__.py  job.py  json_schema.py  process.py  process_registry.py  registered_process.py  registry.py  reporter.py  request.py  schema.py
s2gos-common/src/s2gos_common/process/cli/: __init__.py  cli.py  request.py
s2gos-common/src/s2gos_common/util/: dynimp.py  obj.py  testing.py
s2gos-common/src/s2gos_common/util/cli/: parameters.py
s2gos-common/src/tests/: test_models.py  test_service.py  test_testing.py
s2gos-common/src/tests/cli/: test_cli.py  test_group.py  test_request.py
s2gos-common/src/tests/process/: test_job.py  test_json_schema.py  test_obj.py  test_process.py  test_process_registry.py  test_pydantic.py  test_registered_process.py  test_registry.py  test_reporter.py  test_request.py  test_schema.py
s2gos-common/src/tests/process/cli/: test_cli.py  test_group.py  test_request.py
s2gos-common/src/tests/util/: test_dynimp.py  test_obj.py
s2gos-common/src/tests/util/cli/: test_group.py
s2gos-exappl/: Dockerfile  README.md  pyproject.toml
s2gos-exappl/src/s2gos_exappl/: cli.py  processors.py
s2gos-models/: pyproject.toml
s2gos-models/src/s2gos_models/: __init__.py  models.py
s2gos-models/src/tests/: test_models.py
s2gos-server/: README.md  pyproject.toml
s2gos-server/src/s2gos_server/: __init__.py  app.py  cli.py  constants.py  defaults.py  exceptions.py  logging.py  main.py  provider.py  routes.py  service.py
s2gos-server/tests/: __init__.py  test_cli.py
search/: search_index.json
todo/: index.html
tools/: common.py  gen_client.py  gen_client_cli_md.py  gen_client_docs.py  gen_dags.py  gen_models.py  gen_server.py  openapi.py  openapi.yaml  sync_versions.py
(+36 files in other folders)
