[project]
name = "s2gos-controller"
version = "0.0.3.dev"
description = "S2GOS control layer comprising a server and client"
requires-python = ">=3.10"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64"]

[tool.pixi.dependencies]
# Combined sub-workspace dependencies to prevent our editable
# PyPI dependencies (our project's sub-workspaces) to install
# PyPI packages instead of using conda packages.
click = "*"
fastapi = "*"
httpx = "*"
pydantic = "*"
pyyaml = "*"
typer = "*"
uri-template = "*"
uvicorn = "*"
# IDE integration
pixi-pycharm = ">=0.0.8,<0.0.9"
# Development & build tools
pip = "*"
hatch = "*"
# Code style & linting
isort = "*"
ruff = "*"
# Unit-testing
pytest = "*"
pytest-cov = "*"
# GUI testing
ipyleaflet = "*"
ipywidgets = "*"
ipywidgets_bokeh = "*"
jupyter = "*"
notebook = "*"
panel = "*"
watchfiles = "*"
# Use cases testing
dask = "*"
xarray = "*"
zarr = "*"
# Needed in /tools
datamodel-code-generator = "*"
tomlkit = "*"  # to sync versions
# Documentation
mkdocs = "*"
mkdocs-autorefs = "*"
mkdocs-material = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"

[tool.pixi.pypi-dependencies]
# I wished we could have "no-deps=true" here,
# or even better "[tool.pixi.workspaces]".
# See https://github.com/prefix-dev/pixi/issues/1417.
s2gos-common = { path = "s2gos-common", editable = true }
s2gos-client = { path = "s2gos-client", editable = true }
s2gos-server = { path = "s2gos-server", editable = true }

[tool.isort]
skip = [".idea", ".github", ".pixi", "htmlcov", "site"]
profile = "black"
line_length = 88
known_first_party = ["s2gos_common", "s2gos_client", "s2gos_server"]

[tool.black]
line-length = 88

[tool.ruff]
include = [
    "notebooks/**/*.py",
    "s2gos-common/src/**/*.py",
    "s2gos-server/src/**/*.py",
    "s2gos-client/src/**/*.py",
    "tools/**/*.py",
]

[tool.ruff.lint]
ignore = ["E501", "I001"]
isort = { relative-imports-order = "closest-to-furthest" }
per-file-ignores = { "*.ipynb" = ["E402"] }
select = ["I", "F", "E"]

[tool.coverage.report]
omit = [
    "s2gos-client/src/s2gos_client/gui/**/*"
]

[tool.mypy]
python_version = "3.10"
packages = [
    "s2gos_client",
    "s2gos_common",
    "s2gos_server",
]
exclude = [
    "s2gos-client/src/test",
    "s2gos-common/src/test",
    "s2gos-server/src/test",
]

########################## Tasks ###############################

# pixi run test

[tool.pixi.tasks.test]
depends-on = ["test-common", "test-server", "test-client"]

[tool.pixi.tasks.test-common]
cmd = "pytest s2gos-common/src/tests"

[tool.pixi.tasks.test-server]
cmd = "pytest s2gos-server/src/tests"

[tool.pixi.tasks.test-client]
cmd = "pytest s2gos-client/src/tests"

# pixi run coverage / coverage-ci

[tool.pixi.tasks.coverage]
depends-on = ["cov-common", "cov-server", "cov-client", "cov-report-html"]

[tool.pixi.tasks.coverage-ci]
depends-on = ["cov-common", "cov-server", "cov-client", "cov-report-xml"]

[tool.pixi.tasks.cov-report-html]
cmd = "coverage html -d .cov-report && coverage report"

[tool.pixi.tasks.cov-report-xml]
cmd = "coverage xml -o coverage.xml && coverage report"

[tool.pixi.tasks.cov-common]
cmd = "pytest --cov s2gos-common/src/s2gos_common --cov-report= --cov-append s2gos-common/src/tests"

[tool.pixi.tasks.cov-server]
cmd = "pytest --cov s2gos-server/src/s2gos_server --cov-report= --cov-append s2gos-server/src/tests"

[tool.pixi.tasks.cov-client]
cmd = "pytest --cov s2gos-client/src/s2gos_client --cov-report= --cov-append s2gos-client/src/tests"

# pixi run lint

[tool.pixi.tasks.lint]
depends-on = ["lint-common", "lint-server", "lint-client"]

[tool.pixi.tasks.lint-common]
cmd = "ruff check s2gos-common/src"

[tool.pixi.tasks.lint-server]
cmd = "ruff check s2gos-server/src"

[tool.pixi.tasks.lint-client]
cmd = "ruff check s2gos-client/src"

# pixi run generate

[tool.pixi.tasks.generate]
depends-on = ["gen-models", "gen-server", "gen-client"]

[tool.pixi.tasks.gen-models]
cmd = "python -m tools.gen_models"

[tool.pixi.tasks.gen-server]
cmd = "python -m tools.gen_server"

[tool.pixi.tasks.gen-client]
cmd = "python -m tools.gen_client && python -m tools.gen_client_docs"

# pixi run sync-versions

[tool.pixi.tasks.sync-versions]
cmd = "python -m tools.sync_versions"

# docs

[tool.pixi.tasks.docs-serve]
cmd = "mkdocs serve"

[tool.pixi.tasks.docs-build]
cmd = "mkdocs build"
