[project]
name = "s2gos-controller"
version = "0.1.0.dev0"
description = "S2GOS control layer comprising a gateway server and client"
requires-python = ">=3.10"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64"]

[tool.pixi.dependencies]
# Eozilla dependencies.
# Comment out, if using the editable versions,
# see [tool.pixi.pypi-dependencies] below.
#appligator = ">=0.0.8,<0.0.9"
#cuiman = ">=0.0.8,<0.0.9"
#gavicore = ">=0.0.8,<0.0.9"
#procodile = ">=0.0.8,<0.0.9"
#wraptile = ">=0.0.8,<0.0.9"
# Combined sub-workspace dependencies to prevent our editable
# PyPI dependencies (our project's sub-workspaces) to install
# PyPI packages instead of using conda packages.
click = "*"
fastapi = "*"
httpx = "*"
pydantic = "*"
pyyaml = "*"
typer = "*"
universal_pathlib = ">=0.3.8,<0.4"
uri-template = "*"
uvicorn = "*"
# IDE integration
pixi-pycharm = ">=0.0.8,<0.0.9"
# Development & build tools
pip = "*"
hatch = "*"
# Code style & linting
isort = "*"
ruff = "*"
mypy = "*"
# Unit-testing
pytest = "*"
pytest-cov = "*"
# GUI testing
ipyleaflet = "*"
ipywidgets = "*"
ipywidgets_bokeh = "*"
jupyter = "*"
notebook = "*"
panel = "*"
watchfiles = "*"
# Use cases testing
dask = "*"
xarray = "*"
zarr = "*"
# Needed in /tools
datamodel-code-generator = "*"
tomlkit = "*"  # to sync versions
# Documentation
mkdocs = "*"
mkdocs-autorefs = "*"
mkdocs-material = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"
mkdocs-jupyter = "*"
nbformat = "*"
pydantic-settings = ">=2.12.0,<3"

[tool.pixi.pypi-dependencies]
# I wished we could have "no-deps=true" here,
# or even better "[tool.pixi.workspaces]".
# See https://github.com/prefix-dev/pixi/issues/1417.
s2gos-client = { path = "s2gos-client", editable = true }
s2gos-server = { path = "s2gos-server", editable = true }
#
# Uncomment the following to allow using eozilla from sources
# Note, using the wraptile server is for testing only
#
appligator = { path = "../eozilla/appligator", editable = true }
cuiman = { path = "../eozilla/cuiman", editable = true }
gavicore = { path = "../eozilla/gavicore", editable = true }
procodile = { path = "../eozilla/procodile", editable = true }
wraptile = { path = "../eozilla/wraptile", editable = true }

# Airflow is only available on PyPI
apache-airflow-client = "==3.0.2"

[tool.isort]
skip = [".idea", ".github", ".pixi", "htmlcov", "site"]
profile = "black"
line_length = 88
known_first_party = ["s2gos_client", "s2gos_server"]

[tool.black]
line-length = 88

[tool.ruff]
include = [
    "notebooks/**/*.py",
    "s2gos-client/src/**/*.py",
    "s2gos-server/src/**/*.py",
    "tools/**/*.py",
]

[tool.ruff.lint]
ignore = ["E501", "I001"]
isort = { relative-imports-order = "closest-to-furthest" }
per-file-ignores = { "*.ipynb" = ["E402"] }
select = ["I", "F", "E"]

[tool.coverage.report]
omit = []

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disable_error_code = ["valid-type", "import-untyped"]
exclude = [
    "s2gos-client/tests",
    "s2gos-server/tests",
    "tools",
]

########################## Tasks ###############################

# pixi run test

[tool.pixi.tasks.test]
depends-on = ["test-client", "test-server"]

[tool.pixi.tasks.test-client]
cmd = "pytest s2gos-client/tests"

[tool.pixi.tasks.test-server]
cmd = "pytest s2gos-server/tests"


# pixi run coverage / coverage-ci

[tool.pixi.tasks.coverage]
depends-on = ["cov-client", "cov-server", "cov-report-html"]

[tool.pixi.tasks.coverage-ci]
depends-on = ["cov-client", "cov-server", "cov-report-xml"]

[tool.pixi.tasks.cov-report-html]
cmd = "coverage html -d .cov-report && coverage report"

[tool.pixi.tasks.cov-report-xml]
cmd = "coverage xml -o coverage.xml && coverage report"

[tool.pixi.tasks.cov-client]
cmd = "pytest --cov s2gos-client/src/s2gos_client --cov-report= --cov-append s2gos-client/tests"

[tool.pixi.tasks.cov-server]
cmd = "pytest --cov s2gos-server/src/s2gos_server --cov-report= --cov-append s2gos-server/tests"

# pixi run check

[tool.pixi.tasks.check]
depends-on = ["check-client", "check-server", "typecheck"]

[tool.pixi.tasks.check-client]
cmd = "ruff check s2gos-client/src"

[tool.pixi.tasks.check-server]
cmd = "ruff check s2gos-server/src"

[tool.pixi.tasks.typecheck]
cmd = "mypy ."

# pixi run generate

[tool.pixi.tasks.gen-client-docs]
cmd = "python -m tools.gen_client_docs"

# pixi run sync-versions

[tool.pixi.tasks.sync-versions]
cmd = "python -m tools.sync_versions"

# docs

[tool.pixi.tasks.docs-serve]
cmd = "mkdocs serve"

[tool.pixi.tasks.docs-build]
cmd = "mkdocs build"
