#  Copyright (c) 2025 by ESA DTE-S2GOS team and contributors
#  Permissions are hereby granted under the terms of the Apache 2.0 License:
#  https://opensource.org/license/apache-2-0.

[project]
name = "s2gos-client"
version = "0.0.6.dev0"
description = "Python client for the ESA DTE-S2GOS synthetic scene generator service"
readme = "README.md"
authors = [
  {name = "Norman Fomferra (Brockmann Consult GmbH)"},
  {name = "Tejas Morbagal Harish (Brockmann Consult GmbH)"}
]
keywords = [
  "synthetic scene generation",
  "esa",
  "eRadiate",
  "zarr"
]
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]
requires-python = ">=3.10"
dependencies = [
  # Eozilla dependencies
  "cuiman >=0.0.8",
  "gavicore >=0.0.8",
]

[project.scripts]
s2gos-client = "s2gos_client.cli:cli"

[project.urls]
Documentation = "https://s2gos-dev.github.io/s2gos-controller"
Repository = "https://github.com/s2gos-dev/s2gos-controller"
Changelog = "https://github.com/s2gos-dev/s2gos-controller/blob/main/CHANGES.md"
Issues = "https://github.com/s2gos-dev/s2gos-controller/issues"

[build-system]
requires = ["hatch"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = [
  "src/s2gos_client/**/*",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.hatch.build.targets.wheel]
include = [
  "src/s2gos_client/**/*"
]
